--- a/src/Menu.qss
+++ b/src/Menu.qss
@@ -1,9 +1,9 @@
-SubMenu {
+Menu {
   font-size: 20px;
   background-color: #0ab04a;
 }
 
-SubMenu::item:selected {
+Menu::item:selected {
   background-color: #1bc15b;
 }
 
